added http api implementation tested locally using docker, postman
