# src/routes/run.js
@@ -1,14 +1,7 @@
 const { hasParam, walkObject, isInteger } = require('../lib/util');
 const runs = require('../models/run');
 const { log } = require('../lib/log');
-
-const RUN_SPEC = {
-  taskId: 'int',
-  subtype: 'int',
-  code: 'str',
-  runId: 'int',
-  jobInputData: 'ignore',
-};
+const { sendStop, sendBuildRunBundle } = require('../lib/worker-process');
 
 function respondWith(code, response) {
   response.status(code);
@@ -29,13 +22,27 @@ async function runIdOk(request, response) {
   return true;
 }
 
+function parseErrorResponse(errObj) {
+  return {
+    error: `${errObj}`,
+  };
+}
 async function stopRun(request, response) {
-  if (!runIdOk(request, response)) {
+  if (!await runIdOk(request, response)) {
     response.send('');
     return;
   }
-  log.log('alpha');
-  // TODO 200
+  const runId = parseInt(request.params.run_id, 10);
+
+  try {
+    await sendStop(runId);
+    response.status(200);
+    response.send('');
+  } catch (error) {
+    log.log('Stop Request Error', error);
+    response.status(503);
+    response.json(parseErrorResponse(error));
+  }
 }
 
 function parseRunStatus({ output, runData, errMsg }) {
@@ -47,25 +54,50 @@ function parseRunStatus({ output, runData, errMsg }) {
 }
 
 async function runStatus(request, response) {
-  if (!runIdOk(request, response)) {
+  if (!await runIdOk(request, response)) {
     response.send('');
     return;
   }
   const runId = parseInt(request.params.run_id, 10);
 
-  response.send(parseRunStatus(await runs.getRunById(runId)));
   response.status(200);
+  response.json(parseRunStatus(await runs.getRunById(runId)));
 }
+
+const RUN_SPEC = {
+  taskId: 'int',
+  subtype: 'str',
+  type: 'int',
+  code: 'str',
+  runId: 'int',
+  jobId: 'int',
+  params: 'ignore',
+  entities: 'ignore',
+  owned: 'ignore',
+  accessToken: 'ignore',
+  state: 'ignore',
+};
 
 async function buildAndRun(request, response) {
   if (!walkObject(request.body, RUN_SPEC)) {
     respondWith(400, response);
+    return;
   }
-  // TODO 200/503
+
+  const runSpec = request.body;
+
+  try {
+    await sendBuildRunBundle(runSpec);
+    response.status(200);
+    response.send('');
+  } catch (error) {
+    response.json(parseErrorResponse(error));
+    response.status(503);
+  }
 }
 
 async function deleteRun(request, response) {
-  if (!runIdOk(request, response)) {
+  if (!await runIdOk(request, response)) {
     response.send('');
     return;
   }
@@ -74,11 +106,11 @@ async function deleteRun(request, response) {
   try {
     await runs.removeRun(runId);
     response.status(200);
-  } catch {
+    response.send('');
+  } catch (error) {
     response.status(503);
+    response.json(parseErrorResponse(error));
   }
-
-  response.send('');
 }
 
 module.exports = {
